test_next-20180205/20180206031535/build/defconfig/build_20180206031535_log.txt
test_build: Tue Feb 6 03:21:56 PST 2018: started on defconfig test_next-20180205 (a352043b40947d6253b87993cb24ee0f893aad89)
test_build: Tue Feb 6 03:21:56 PST 2018: serial is 20180206031535
arch/arm64/Makefile:27: ld does not support --fix-cortex-a53-843419; kernel may be susceptible to erratum
arch/arm64/Makefile:48: Detected assembler with broken .inst; disassembly will be unreliable
drivers/mmc/host/meson-gx-mmc.c: In function ‘meson_mmc_clk_gate’:
drivers/mmc/host/meson-gx-mmc.c:377:3: error: implicit declaration of function ‘pinctrl_select_state’ [-Werror=implicit-function-declaration]
   pinctrl_select_state(host->pinctrl, host->pins_clk_gate);
   ^
drivers/mmc/host/meson-gx-mmc.c: In function ‘meson_mmc_probe’:
drivers/mmc/host/meson-gx-mmc.c:1217:2: error: implicit declaration of function ‘devm_pinctrl_get’ [-Werror=implicit-function-declaration]
  host->pinctrl = devm_pinctrl_get(&pdev->dev);
  ^
drivers/mmc/host/meson-gx-mmc.c:1217:16: warning: assignment makes pointer from integer without a cast
  host->pinctrl = devm_pinctrl_get(&pdev->dev);
                ^
drivers/mmc/host/meson-gx-mmc.c:1223:2: error: implicit declaration of function ‘pinctrl_lookup_state’ [-Werror=implicit-function-declaration]
  host->pins_default = pinctrl_lookup_state(host->pinctrl,
  ^
drivers/mmc/host/meson-gx-mmc.c:1224:9: error: ‘PINCTRL_STATE_DEFAULT’ undeclared (first use in this function)
         PINCTRL_STATE_DEFAULT);
         ^
drivers/mmc/host/meson-gx-mmc.c:1224:9: note: each undeclared identifier is reported only once for each function it appears in
drivers/mmc/host/meson-gx-mmc.c:1230:22: warning: assignment makes pointer from integer without a cast
  host->pins_clk_gate = pinctrl_lookup_state(host->pinctrl,
                      ^
cc1: some warnings being treated as errors
make[3]: *** [drivers/mmc/host/meson-gx-mmc.o] Error 1
make[3]: *** Waiting for unfinished jobs....
make[2]: *** [drivers/mmc/host] Error 2
make[1]: *** [drivers/mmc] Error 2
make[1]: *** Waiting for unfinished jobs....
make: *** [drivers] Error 2
test_build: Tue Feb 6 03:26:24 PST 2018: FAILED on defconfig test_next-20180205
test_build: Tue Feb 6 03:26:24 PST 2018: ended on defconfig test_next-20180205
